# serper-mcp-server

./: Dockerfile  README-Postman-Testing.md  README-add.md  docker_serper_client.py  fastmcp_serper_client.py  pyproject.toml
src/serper_mcp_server/: __main__.py
